@@ -110,49 +110,62 @@ void TargetSet::load (const char *name, bool approxName)
 	load ();
 }
 
-void TargetSet::load (std::vector <const char *> &names, TargetSet::iterator const (*multiple_resolver) (TargetSet *ts), bool approxName)
+void TargetSet::load (std::vector <const char *> &names, TargetSet::iterator const (*multiple_resolver) (TargetSet *ts), bool approxName, resolverType resType)
 {
 	for (std::vector <const char *>::iterator iter = names.begin (); iter != names.end(); iter++)
 	{
-		char *endp;
-		int tid = strtol (*iter, &endp, 10);
-		if (*endp == '\0')
+		if (resType == NAME_ID || resType == ID_ONLY)
 		{
-			// numeric target
-			Target *tar = createTarget (tid, obs);
-			if (tar == NULL)
-				throw UnresolvedTarget (*iter);
-			(*this)[tid] = tar;
-		}
-		else
-		{
-			TargetSet ts (obs);
-			ts.load (*iter, approxName);
-			if (ts.size () == 0)
+			char *endp;
+			int tid = strtol (*iter, &endp, 10);
+			if (*endp == '\0')
 			{
-				throw UnresolvedTarget (*iter);
-			}
-			if (ts.size () > 1)
-			{
-				if (multiple_resolver == NULL)
-					throw SqlError ((std::string ("cannot find unique target for ") + (*iter)).c_str ());
-				TargetSet::iterator res = multiple_resolver (&ts);
-				if (res != ts.end ())
+				// numeric target
+				Target *tar = createTarget (tid, obs);
+				if (tar == NULL)
 				{
-					(*this)[res->first] = res->second;
-					ts.erase (res);
+					if (resType == ID_ONLY)
+						throw UnresolvedTarget (*iter);
 				}
 				else
 				{
-					insert (ts.begin (), ts.end ());
-					ts.clear ();
+					(*this)[tid] = tar;
+					continue;
 				}
 			}
-			else if (ts.size () == 1)
+			else
 			{
-				(*this)[ts.begin ()->first] = ts.begin ()->second;
+				// ID_ONLY with non-numeric ID
+				if (resType == ID_ONLY)
+					throw UnresolvedTarget (*iter);
+			}
+		}
+		TargetSet ts (obs);
+		ts.load (*iter, approxName);
+		if (ts.size () == 0)
+		{
+			throw UnresolvedTarget (*iter);
+		}
+		if (ts.size () > 1)
+		{
+			if (multiple_resolver == NULL)
+					throw SqlError ((std::string ("cannot find unique target for ") + (*iter)).c_str ());
+			TargetSet::iterator res = multiple_resolver (&ts);
+			if (res != ts.end ())
+			{
+				(*this)[res->first] = res->second;
+				ts.erase (res);
+			}
+			else
+			{
+				insert (ts.begin (), ts.end ());
 				ts.clear ();
 			}
+		}
+		else if (ts.size () == 1)
+		{
+			(*this)[ts.begin ()->first] = ts.begin ()->second;
+			ts.clear ();
 		}
 	}
 }
